--- a/projects.html
+++ b/projects.html
@@ -4,47 +4,64 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Reema Roy | IT Consultant, Website Developer & Digital Creator</title>
-  <meta name="description" content="Reema Roy provides IT consulting, data migration, website development, and shares trusted skincare, travel & tech     recommendations through blogs and YouTube.">
+
+  <!-- PRIMARY SEO -->
+  <title>Projects | Website Development & Technical Consulting | Reema Roy</title>
+  <meta name="description" content="Explore website development, CMS migration, WordPress projects, and technical consulting case studies by Reema Roy. Performance-driven, scalable digital solutions.">
   <meta name="author" content="Reema Roy">
-  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+  <meta name="robots" content="index, follow">
 
   <!-- CANONICAL -->
-  <link rel="canonical" href="https://www.reemaroy.com/">
+  <link rel="canonical" href="https://www.reemaroy.com/projects">
 
   <!-- OPEN GRAPH -->
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Reema Roy | IT Consultant & Digital Creator">
-  <meta property="og:description" content="IT consulting, website development, and trusted skincare, travel & tech recommendations by Reema Roy.">
-  <meta property="og:url" content="https://www.reemaroy.com/">
+  <meta property="og:title" content="Projects | Website Development & Technical Consulting | Reema Roy">
+  <meta property="og:description" content="Explore real-world website development, CMS migration and consulting case studies delivered with performance, scalability and clarity.">
+  <meta property="og:url" content="https://www.reemaroy.com/projects">
   <meta property="og:image" content="https://www.reemaroy.com/assets/img/profile/profile-2.webp">
   <meta property="og:site_name" content="Reema Roy">
-  
+
   <!-- TWITTER -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Reema Roy | IT Consultant & Digital Creator">
-  <meta name="twitter:description" content="IT consulting, data migration, website development & lifestyle recommendations.">
+  <meta name="twitter:title" content="Projects | Reema Roy">
+  <meta name="twitter:description" content="Website development, migration and consulting case studies focused on performance and scalability.">
   <meta name="twitter:image" content="https://www.reemaroy.com/assets/img/profile/profile-2.webp">
 
-
-  <!-- Favicons -->
+  <!-- FAVICONS -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-  <!-- Fonts -->
+  <!-- GOOGLE FONTS -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Ubuntu:wght@400;500;700&family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
+  <!-- VENDOR CSS -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-  <!-- Main CSS File -->
+  <!-- MAIN CSS -->
   <link href="assets/css/main.css" rel="stylesheet">
+
+  <!-- SCHEMA MARKUP -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "CollectionPage",
+    "name": "Projects - Reema Roy",
+    "url": "https://www.reemaroy.com/projects",
+    "description": "Portfolio of website development, migration, and technical consulting projects delivered by Reema Roy.",
+    "author": {
+      "@type": "Person",
+      "name": "Reema Roy",
+      "url": "https://www.reemaroy.com"
+    }
+  }
+  </script>
 
 </head>
 
@@ -87,8 +104,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Portfolio</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <h2>Projects That Drive Performance & Business Growth</h2>
+        <p>A curated selection of website development, platform migration, and technical consulting projects delivered with clarity, scalability, and measurable impact.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -100,10 +117,10 @@
               <div class="filters-wrapper" data-aos="fade-right" data-aos-delay="150">
                 <ul class="portfolio-filters isotope-filters">
                   <li data-filter="*" class="filter-active">All Projects</li>
-                  <li data-filter=".filter-photography">Photography</li>
-                  <li data-filter=".filter-design">Design</li>
-                  <li data-filter=".filter-automotive">Automotive</li>
-                  <li data-filter=".filter-nature">Nature</li>
+                  <li data-filter=".filter-website-development">Website Development</li>
+                  <li data-filter=".filter-migration">Migration</li>
+                  <li data-filter=".filter-ecommerce">E-commerce</li>
+                  <li data-filter=".filter-consulting">Consulting</li>
                 </ul>
               </div>
             </div>
@@ -116,11 +133,13 @@
                     <img src="assets/img/portfolio/portfolio-portrait-1.webp" class="img-fluid" alt="Portfolio Image" loading="lazy">
                     <div class="portfolio-info">
                       <div class="content">
-                        <span class="category">Photography</span>
-                        <h4>Deccan Chronicle – Digital Transformation</h4>
+                        <span class="category">Migration</span>
+                        <h4>HPBL News</h4>
+                        <p>Data Migration & Platform Transition</p>
+                        <p>Migrated large-scale news website from Hocalwire to WordPress with structured data preservation and near-zero downtime.</p>
                         <div class="portfolio-links">
                           <a href="assets/img/portfolio/portfolio-portrait-1.webp" class="glightbox" title="Capturing Moments"><i class="bi bi-plus-lg"></i></a>
-                          <a href="portfolio-details.html" title="More Details"><i class="bi bi-arrow-right"></i></a>
+                          <a href="hpbl-news-data-migration-and-platform-transition" title="More Details"><i class="bi bi-arrow-right"></i></a>
                         </div>
                       </div>
                     </div>
@@ -132,11 +151,13 @@
                     <img src="assets/img/portfolio/portfolio-2.webp" class="img-fluid" alt="Portfolio Image" loading="lazy">
                     <div class="portfolio-info">
                       <div class="content">
-                        <span class="category">Web Design</span>
-                        <h4>MMR Real Estate</h4>
+                        <span class="category">Website Development</span>
+                        <h4>Mystic Mansion Realty</h4>
+                        <p>High-Performance Business Website</p>
+                        <p>Developed a conversion-focused real estate website with optimized structure and scalable architecture.</p>
                         <div class="portfolio-links">
                           <a href="assets/img/portfolio/portfolio-2.webp" class="glightbox" title="Woodcraft Design"><i class="bi bi-plus-lg"></i></a>
-                          <a href="portfolio-details.html" title="More Details"><i class="bi bi-arrow-right"></i></a>
+                          <a href="mmr-business-website" title="More Details"><i class="bi bi-arrow-right"></i></a>
                         </div>
                       </div>
                     </div>
@@ -148,33 +169,18 @@
                     <img src="assets/img/portfolio/portfolio-portrait-2.webp" class="img-fluid" alt="Portfolio Image" loading="lazy">
                     <div class="portfolio-info">
                       <div class="content">
-                        <span class="category">Automotive</span>
-                        <h4>HPBL News</h4>
+                        <span class="category">Website Development</span>
+                        <h4>The Oorza</h4>
+                        <p>E-commerce Platform Development</p>
+                        <p>Built a performance-optimized e-commerce website with secure payment integration and growth-ready backend.</p>
                         <div class="portfolio-links">
                           <a href="assets/img/portfolio/portfolio-portrait-2.webp" class="glightbox" title="Classic Beauty"><i class="bi bi-plus-lg"></i></a>
-                          <a href="portfolio-details.html" title="More Details"><i class="bi bi-arrow-right"></i></a>
+                          <a href="the-oorza-platform-development" title="More Details"><i class="bi bi-arrow-right"></i></a>
                         </div>
                       </div>
                     </div>
                   </div>
                 </div><!-- End Portfolio Item -->
-
-                <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-nature">
-                  <div class="portfolio-wrap">
-                    <img src="assets/img/portfolio/portfolio-portrait-4.webp" class="img-fluid" alt="Portfolio Image" loading="lazy">
-                    <div class="portfolio-info">
-                      <div class="content">
-                        <span class="category">Nature</span>
-                        <h4>NCR Today</h4>
-                        <div class="portfolio-links">
-                          <a href="assets/img/portfolio/portfolio-portrait-4.webp" class="glightbox" title="Natural Growth"><i class="bi bi-plus-lg"></i></a>
-                          <a href="portfolio-details.html" title="More Details"><i class="bi bi-arrow-right"></i></a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div><!-- End Portfolio Item -->
-
               </div><!-- End Portfolio Container -->
             </div>
           </div>
