--- a/projects.html
+++ b/projects.html
@@ -138,7 +138,7 @@
                         <p>Data Migration & Platform Transition</p>
                         <p>Migrated large-scale news website from Hocalwire to WordPress with structured data preservation and near-zero downtime.</p>
                         <div class="portfolio-links">
-                          <a href="assets/img/projects/hpbl-news-main-block.webp" class="glightbox" title="Capturing Moments"><i class="bi bi-plus-lg"></i></a>
+                          <a href="assets/img/projects/hpbl-news-main-block.webp" class="glightbox" title="HPBL News - Data Migration & Platform Transition"><i class="bi bi-plus-lg"></i></a>
                           <a href="hpbl-news-data-migration-and-platform-transition" title="More Details"><i class="bi bi-arrow-right"></i></a>
                         </div>
                       </div>
@@ -156,7 +156,7 @@
                         <p>High-Performance Business Website</p>
                         <p>Developed a conversion-focused real estate website with optimized structure and scalable architecture.</p>
                         <div class="portfolio-links">
-                          <a href="assets/img/projects/mmr-main-page.webp" class="glightbox" title="Woodcraft Design"><i class="bi bi-plus-lg"></i></a>
+                          <a href="assets/img/projects/mmr-main-page.webp" class="glightbox" title="Mystic Mansion Realty - High-Performance Business Website"><i class="bi bi-plus-lg"></i></a>
                           <a href="mmr-business-website" title="More Details"><i class="bi bi-arrow-right"></i></a>
                         </div>
                       </div>
@@ -174,7 +174,7 @@
                         <p>E-commerce Platform Development</p>
                         <p>Built a performance-optimized e-commerce website with secure payment integration and growth-ready backend.</p>
                         <div class="portfolio-links">
-                          <a href="assets/img/projects/portfolio-portrait-2.webp" class="glightbox" title="Classic Beauty"><i class="bi bi-plus-lg"></i></a>
+                          <a href="assets/img/projects/portfolio-portrait-2.webp" class="glightbox" title="The Oorza - E-commerce Platform Development"><i class="bi bi-plus-lg"></i></a>
                           <a href="the-oorza-platform-development" title="More Details"><i class="bi bi-arrow-right"></i></a>
                         </div>
                       </div>
