--- a/projects.html
+++ b/projects.html
@@ -130,11 +130,11 @@
 
                 <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-photography">
                   <div class="portfolio-wrap">
-                    <img src="assets/img/projects/hpbl-news-main-block.webp" class="img-fluid" alt="Portfolio Image" loading="lazy">
+                    <img src="assets/img/projects/hpbl-news-main-block.webp" class="img-fluid" alt="Portfolio Image" loading="lazy" style="object-fit: contain;">
                     <div class="portfolio-info" style="background: linear-gradient(to top, rgba(0,0,0,0.9), rgba(0,0,0,0.6));">
                       <div class="content">
-                        <span class="category" style="color: #ffffff;">Migration</span>
-                        <h4>HPBL News</h4>
+                        <span class="category">Migration</span>
+                        <h4 style="color: #ffffff;">HPBL News</h4>
                         <p>Data Migration & Platform Transition</p>
                         <p>Migrated large-scale news website from Hocalwire to WordPress with structured data preservation and near-zero downtime.</p>
                         <div class="portfolio-links">
@@ -148,11 +148,11 @@
 
                 <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-design">
                   <div class="portfolio-wrap">
-                    <img src="assets/img/projects/mmr-main-page.webp" class="img-fluid" alt="Portfolio Image" loading="lazy">
+                    <img src="assets/img/projects/mmr-main-page.webp" class="img-fluid" alt="Portfolio Image" loading="lazy" style="object-fit: contain;">
                     <div class="portfolio-info" style="background: linear-gradient(to top, rgba(0,0,0,0.9), rgba(0,0,0,0.6));">
                       <div class="content">
-                        <span class="category" style="color: #ffffff;">Website Development</span>
-                        <h4>Mystic Mansion Realty</h4>
+                        <span class="category">Website Development</span>
+                        <h4 style="color: #ffffff;">Mystic Mansion Realty</h4>
                         <p>High-Performance Business Website</p>
                         <p>Developed a conversion-focused real estate website with optimized structure and scalable architecture.</p>
                         <div class="portfolio-links">
@@ -166,11 +166,11 @@
 
                 <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-automotive">
                   <div class="portfolio-wrap">
-                    <img src="assets/img/projects/portfolio-portrait-2.webp" class="img-fluid" alt="Portfolio Image" loading="lazy">
+                    <img src="assets/img/projects/portfolio-portrait-2.webp" class="img-fluid" alt="Portfolio Image" loading="lazy" style="object-fit: contain;">
                     <div class="portfolio-info" style="background: linear-gradient(to top, rgba(0,0,0,0.9), rgba(0,0,0,0.6));">
                       <div class="content">
-                        <span class="category" style="color: #ffffff;">Website Development</span>
-                        <h4>The Oorza</h4>
+                        <span class="category">Website Development</span>
+                        <h4 style="color: #ffffff;">The Oorza</h4>
                         <p>E-commerce Platform Development</p>
                         <p>Built a performance-optimized e-commerce website with secure payment integration and growth-ready backend.</p>
                         <div class="portfolio-links">
