--- a/projects.html
+++ b/projects.html
@@ -128,7 +128,7 @@
             <div class="col-lg-9">
               <div class="row gy-4 portfolio-container isotope-container" data-aos="fade-up" data-aos-delay="200">
 
-                <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-photography">
+                <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-migration">
                   <div class="portfolio-wrap">
                     <img src="assets/img/projects/hpbl-news-main-block.webp" class="img-fluid" alt="Portfolio Image" loading="lazy" style="object-fit: contain;">
                     <div class="portfolio-info" style="background: linear-gradient(to top, rgba(0,0,0,0.9), rgba(0,0,0,0.6));">
@@ -146,7 +146,7 @@
                   </div>
                 </div><!-- End Portfolio Item -->
 
-                <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-design">
+                <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-website-development">
                   <div class="portfolio-wrap">
                     <img src="assets/img/projects/mmr-main-page.webp" class="img-fluid" alt="Portfolio Image" loading="lazy" style="object-fit: contain;">
                     <div class="portfolio-info" style="background: linear-gradient(to top, rgba(0,0,0,0.9), rgba(0,0,0,0.6));">
@@ -164,7 +164,7 @@
                   </div>
                 </div><!-- End Portfolio Item -->
 
-                <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-automotive">
+                <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-website-development">
                   <div class="portfolio-wrap">
                     <img src="assets/img/projects/the-oorza.webp" class="img-fluid" alt="Portfolio Image" loading="lazy" style="object-fit: contain;">
                     <div class="portfolio-info" style="background: linear-gradient(to top, rgba(0,0,0,0.9), rgba(0,0,0,0.6));">
