--- a/projects.html
+++ b/projects.html
@@ -164,7 +164,7 @@
                   </div>
                 </div><!-- End Portfolio Item -->
 
-                <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-website-development">
+                <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-website-development filter-ecommerce">
                   <div class="portfolio-wrap">
                     <img src="assets/img/projects/the-oorza.webp" class="img-fluid" alt="Portfolio Image" loading="lazy" style="object-fit: contain;">
                     <div class="portfolio-info" style="background: linear-gradient(to top, rgba(0,0,0,0.9), rgba(0,0,0,0.6));">
