--- a/projects/hpbl-news-data-migration.html
+++ b/projects/hpbl-news-data-migration.html
@@ -69,10 +69,10 @@
     <div class="header-container d-flex flex-column align-items-start">
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
+          <li><a href="#hero"><i class="bi bi-house navicon"></i>Home</a></li>
           <li><a href="/about"><i class="bi bi-person navicon"></i> About</a></li>
           <li><a href="/resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
-          <li><a href="/portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
+          <li><a href="/portfolio" class="active"><i class="bi bi-images navicon"></i> Portfolio</a></li>
           <li><a href="/services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
           <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Resources</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
@@ -140,15 +140,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-1.webp" alt="Portfolio Image" class="img-fluid" loading="lazy">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-10.webp" alt="Portfolio Image" class="img-fluid" loading="lazy">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-7.webp" alt="Portfolio Image" class="img-fluid" loading="lazy">
+                  <img src="projects/hpbl-news-main-block.webp" alt="Portfolio Image" class="img-fluid" loading="lazy">
                 </div>
 
               </div>
@@ -160,10 +152,10 @@
             <div class="portfolio-info" data-aos="fade-left" data-aos-delay="200">
               <h3>Project Information</h3>
               <ul>
-                <li><strong>Category</strong>: Web Development</li>
-                <li><strong>Client</strong>: Victoria Technologies</li>
-                <li><strong>Project date</strong>: 01 March, 2024</li>
-                <li><strong>Project URL</strong>: <a href="#" target="_blank">www.example.com</a></li>
+                <li><strong>Category</strong>: Migration</li>
+                <li><strong>Client</strong>: HPBL News</li>
+                <li><strong>Project date</strong>: 2024</li>
+                <li><strong>Project URL</strong>: <a href="#" target="_blank">https://hpblnews.com</a></li>
               </ul>
             </div>
           </div>
