--- a/projects/hpbl-news-data-migration.html
+++ b/projects/hpbl-news-data-migration.html
@@ -155,7 +155,7 @@
                 <li><strong>Category</strong>: Migration</li>
                 <li><strong>Client</strong>: HPBL News</li>
                 <li><strong>Project date</strong>: 2024</li>
-                <li><strong>Project URL</strong>: <a href="#" target="_blank">https://hpblnews.com</a></li>
+                <li><strong>Project URL</strong>: <a href="https://hpblnews.com" target="_blank">https://hpblnews.com</a></li>
               </ul>
             </div>
           </div>
