--- a/projects/hpbl-news-data-migration.html
+++ b/projects/hpbl-news-data-migration.html
@@ -72,7 +72,7 @@
           <li><a href="#hero"><i class="bi bi-house navicon"></i>Home</a></li>
           <li><a href="/about"><i class="bi bi-person navicon"></i> About</a></li>
           <li><a href="/resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
-          <li><a href="/portfolio" class="active"><i class="bi bi-images navicon"></i> Portfolio</a></li>
+          <li><a href="/projects" class="active"><i class="bi bi-images navicon"></i> Projects</a></li>
           <li><a href="/services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
           <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Resources</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
@@ -105,21 +105,21 @@
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Portfolio Details</li>
+            <li class="current">Projects Details</li>
           </ol>
         </nav>
       </div>
     </div><!-- End Page Title -->
 
-    <!-- Portfolio Details Section -->
-    <section id="portfolio-details" class="portfolio-details section">
+    <!-- Projects Details Section -->
+    <section id="projects-details" class="Projects-details section">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row gy-4">
 
           <div class="col-lg-8">
-            <div class="portfolio-details-slider swiper init-swiper">
+            <div class="projects-details-slider swiper init-swiper">
 
               <script type="application/json" class="swiper-config">
                 {
@@ -140,7 +140,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="/assets/img/projects/hpbl-news-main-block.webp" alt="Portfolio Image" class="img-fluid" loading="lazy">
+                  <img src="/assets/img/projects/hpbl-news-main-block.webp" alt="Projects Image" class="img-fluid" loading="lazy">
                 </div>
 
               </div>
@@ -149,7 +149,7 @@
           </div>
 
           <div class="col-lg-4">
-            <div class="portfolio-info" data-aos="fade-left" data-aos-delay="200">
+            <div class="projects-info" data-aos="fade-left" data-aos-delay="200">
               <h3>Project Information</h3>
               <ul>
                 <li><strong>Category</strong>: Migration</li>
@@ -161,7 +161,7 @@
           </div>
 
           <div class="col-lg-12">
-            <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
+            <div class="projects-description" data-aos="fade-up" data-aos-delay="300">
               <h2>Project Overview</h2>
               <p>HPBL News required a structured migration from the Hocalwire publishing platform to WordPress to improve backend flexibility, SEO control, and long-term scalability.</p>
               <div class="features mt-4">
@@ -217,7 +217,7 @@
 
       </div>
 
-    </section><!-- /Portfolio Details Section -->
+    </section><!-- /projects Details Section -->
 
   </main>
 
