--- a/projects/the-oorza-ecommerce-website-development.html
+++ b/projects/the-oorza-ecommerce-website-development.html
@@ -11,19 +11,19 @@
   <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
   <!-- CANONICAL -->
-  <link rel="canonical" href="https://iamreemaroy.github.io/Reema-Roy/projects/the-oorza-ecommerce-website-development">
+  <link rel="canonical" href="https://www.reemaroy.com/projects/the-oorza-ecommerce-website-development">
 
   <!-- OPEN GRAPH -->
   <meta property="og:title" content="The Oorza E-commerce Website Case Study">
   <meta property="og:description" content="Performance-optimized e-commerce platform with secure payment integration.">
   <meta property="og:type" content="article">
-  <meta property="og:image" content="https://iamreemaroy.github.io/Reema-Roy/assets/img/projects/portfolio-portrait-2.webp">
-  <meta property="og:url" content="https://iamreemaroy.github.io/Reema-Roy/projects/hpbl-news-data-migration">
+  <meta property="og:image" content="https://www.reemaroy.com/assets/img/projects/the-oorza.webp">
+  <meta property="og:url" content="https://www.reemaroy.com/projects/the-oorza-ecommerce-website-development">
   
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="HPBL News Migration Case Study">
-  <meta name="twitter:description" content="WordPress migration with structured data preservation and SEO stability.">
-  <meta name="twitter:image" content="https://iamreemaroy.github.io/Reema-Roy/assets/img/projects/hpbl-news-main-block.webp">
+  <meta name="twitter:title" content="The Oorza E-commerce Website Case Study">
+  <meta name="twitter:description" content="Performance-optimized e-commerce platform with secure payment integration.">
+  <meta name="twitter:image" content="https://www.reemaroy.com/assets/img/projects/the-oorza.webp">
 
 
   <!-- Favicons -->
@@ -49,13 +49,13 @@
     {
      "@context": "https://schema.org",
      "@type": "CaseStudy",
-     "name": "HPBL News Data Migration",
+     "name": "The Oorza E-commerce Website Development",
      "author": {
        "@type": "Person",
        "name": "Reema Roy"
      },
-     "about": "CMS Migration from Hocalwire to Wordpress",
-     "url": "https://www.reemaroy.com/projects/hpbl-news-data-migration"
+     "about": "Performance-optimized e-commerce platform with secure payment integration.",
+     "url": "https://www.reemaroy.com/projects/the-oorza-ecommerce-website-development"
     }
 </script>
 
@@ -140,7 +140,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="/assets/img/projects/hpbl-news-main-block.webp" alt="Projects Image" class="img-fluid" loading="lazy">
+                  <img src="/assets/img/projects/the-oorza.webp" alt="Projects Image" class="img-fluid" loading="lazy">
                 </div>
 
               </div>
